# cleftly

./: .env  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc  README.md  SECURITY.md  app.go  bun.lockb  go.mod  main.go  package.json  package.json.md5  pnpm-lock.yaml  svelte.config.js  sveltekit-wails.sh  tailwind.config.ts  vite.config.ts  wails.json
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  prettier.yml  tauribuild.yml
.svelte-kit/: tsconfig.json
assets/: updates.json
docs/: mkdocs.yml  pyproject.toml
docs/docs/: SUMMARY.md  compatibility.md  index.md  library.md
docs/docs/_stylesheets/: extra.css
docs/docs/contributing/: build.md  code-of-conduct.md  docs.md  i18n.md  index.md
docs/docs/developers/contributing/: SUMMARY.md  index.md
docs/docs/developers/plugins/: events.md  index.md
docs/docs/plugins/: events.md  index.md
frontend/: .prettierrc  package.json  package.json.md5  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/components/: ImportDirectory.svelte
frontend/src/lib/: db.ts  library.ts  player.ts  stores.ts  utils.ts
frontend/src/lib/wailsjs/go/: models.ts
frontend/src/lib/wailsjs/go/main/: App.d.ts  App.js
frontend/src/routes/: +layout.svelte  +page.svelte  Player.svelte
frontend/src/routes/404/: +page.svelte
frontend/src/routes/album/: +page.svelte
frontend/src/routes/home/: +page.svelte
frontend/src/routes/sandbox/: +page.svelte
frontend/src/routes/settings/: +page.svelte
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  discordrpc.rs  files.rs  library.rs  main.rs  stream.rs  window_ext.rs  ytdl.rs
src/components/: AddToPlaylist.svelte  Album.svelte  AnimArt.svelte  CreatePlaylist.svelte  Playlist.svelte  Progress.svelte  Search.svelte  Track.svelte  TrackList.svelte  Visualizer.svelte
src/components/icons/: LastFm.svelte
src/lib/: config.ts  db.ts  events.ts  library.ts  lrcutils.ts  lyrics.ts  menus.ts  player.ts  playlists.ts  plugins.ts  stores.ts  taurievents.ts  utils.ts
src/lib/api/: README.md  config.ts  events.ts  generate.ts
src/lib/backends/: index.ts  native.ts  web.ts
src/lib/i18n/: en.json  es.json  index.ts
src/lib/integrations/: lastfm.ts  musixmatch.ts
src/lib/lyrics/: index.ts  lrcutils.ts  richsync.ts
src/lib/plugins/: discordrpc.ts  lastfm.ts  musixmatch.ts  test.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  Lyrics.svelte  MobileNav.svelte  Player.svelte  PlayerSettings.svelte  Queue.svelte  Sidebar.svelte
src/routes/home/: +page.svelte
src/routes/settings/: +page.svelte  LastFmLogin.svelte  Option.svelte  Updater.svelte
src/routes/settings/plugins/: +page.svelte  PluginCard.svelte
themes/: pink.ts
