[tool.poetry]
name = "docs"
version = "1.0.0"
description = "Cleftly Documentation with Material for MkDocs"
authors = ["wxllow <willow@wxllow.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.4.7"
mkdocs-literate-nav = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
