[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["wxllow"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [
    "window-maximize",
    "window-unminimize",
    "window-start-dragging",
    "window-request-user-attention",
    "window-unmaximize",
    "window-show",
    "window-set-title",
    "window-minimize",
    "window-hide",
    "updater",
    "os-all",
    "protocol-all",
    "dialog-all",
    "http-all",
    "path-all",
    "fs-all",
    "shell-open",
    "linux-protocol-headers",
    "devtools",
] }
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
percent-encoding = "2.3.0"
mime_guess = "2.0.4"
rodio = { version = "0.17.3", features = ["symphonia-aac", "symphonia-isomp4"] }
rand = "0.8.5"
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }
tauri-plugin-context-menu = "0.7.0"
regex = "1.10.3"
md5 = "0.7.0"
which = "6.0.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = { version = "0.4.20", features = ["release_max_level_info"] }
time = { version = "0.3.34", features = ["serde"] }
lofty = "0.18.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
